# PhysicallyBasedModeling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/renderer/: CMakeLists.txt  gpuMemoryImpl.hpp  renderer.cpp  renderer.hpp  rendererImpl.hpp
src/renderer/mesh/: drawArray.cpp  drawArray.hpp
src/utils/fileloader/: OBJLoader.hpp
src/utils/geometry/: IntOnMesh.hpp  MeshConv.hpp  array.hpp  meshgenerator.hpp
src/utils/logger/: logger.hpp
src/utils/mathfunc/: mathUtils.hpp  mathfunc.hpp
src/utils/memory/: allocator.hpp  array.hpp
test/compileAll/: CMakeLists.txt  main.cpp
test/math/: CMakeLists.txt  main.cpp
test/rendererTest/: CMakeLists.txt  main.cpp
test/rendererTest/shader/: build.bat  build.sh  gbuffer.slang  lighting.slang  shadow.slang  test.slang
